--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <button data-all-clear class="span-two">AC</button>
     <button data-delete>DEL</button>
-    <button data-operation>÷</button>
+    <button data-operation>/</button>
     <button data-number>7</button>
     <button data-number>8</button>
     <button data-number>9</button>
@@ -24,7 +24,7 @@
     <button data-number>4</button>
     <button data-number>5</button>
     <button data-number>6</button>
-    <button data-operation>/</button>
+    <button data-operation>+</button>
     <button data-number>1</button>
     <button data-number>2</button>
     <button data-number>3</button>
