--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
     <button data-operation class="operation">(</button>
     <button data-operation class="operation">)</button>
     <button data-operation class="operation">%</button>
-    <button data-all-clear class="all-clear">AC</button>
-    <button data-operation class="operation">x^-1</button>
+    <button data-all-clear class="all-clear" style="color: rgba(255,60,96,0.81)">AC</button>
+    <button data-operation class="operation">^-1</button>
     <button data-number>7</button>
     <button data-number>8</button>
     <button data-number>9</button>
-    <button data-operation class="operation">/</button>
-    <button data-operation class="operation">x^1/2</button>
+    <button data-operation class="operation" style="color: rgba(53, 180, 240, .5)">/</button>
+    <button data-operation class="operation">^1/2</button>
     <button data-number>4</button>
     <button data-number>5</button>
     <button data-number>6</button>
-    <button data-operation class="operation">*</button>
-    <button data-operation class="operation">x^n</button>
+    <button data-operation class="operation" style="color: rgba(53, 180, 240, .5)">*</button>
+    <button data-operation class="operation">^</button>
     <button data-number>1</button>
     <button data-number>2</button>
     <button data-number>3</button>
-    <button data-operation class="operation">-</button>
-    <button data-operation class="operation">x^2</button>
+    <button data-operation class="operation" style="color: rgba(53, 180, 240, .5)">-</button>
+    <button data-operation class="operation">^2</button>
     <button data-number>0</button>
     <button data-operation class="operation">.</button>
-    <button data-equals style="background-color: rgba(53, 180, 240, 0.25)">=</button>
-    <button data-operation class="operation">+</button>
+    <button data-equals style="background-color: rgba(53, 180, 240, .5)">=</button>
+    <button data-operation class="operation" style="color: rgba(53, 180, 240, .5)">+</button>
 </div>
 </body>
 </html>
